--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "cotter": "^0.2.1",
+    "cotter-token-js": "^0.1.4",
     "vue": "^2.6.11"
   },
   "devDependencies": {
